--- a/css/style.css
+++ b/css/style.css
@@ -339,7 +339,7 @@ section.container:target > form.flip {
 section.container > form.flip > .front {
 	font-size: 1.25em;
 	background: beige url("../img/bg.png");
-	background: url("../img/images (47).jpeg") no-repeat 450px 20px, url("../img/bg.png");
+	background: url("../img/images .jpeg") no-repeat 450px 20px, url("../img/bg.png");
 	padding: 120px 20px 20px 40%;
 	border: 1px #eae1d5 solid;
 }
